# timbre-transfer

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: gradio_app.py
configs/: default.yaml
data/: .gitkeep
notebooks/: timbre_transfer_colab.ipynb
scripts/: download_models.py  finetune.py  preprocess_dataset.py  run_inference.py
src/timbre_transfer/: __init__.py  audio_io.py  cli.py  config.py
src/timbre_transfer/features/: __init__.py  ddsp_features.py
src/timbre_transfer/inference/: __init__.py  transfer.py
src/timbre_transfer/models/: __init__.py  ddsp_model.py  rave_model.py  registry.py
src/timbre_transfer/training/: __init__.py  finetune.py  preprocess.py
src/timbre_transfer/utils/: __init__.py  download.py
tests/: conftest.py  test_audio_io.py  test_inference_pipeline.py  test_registry.py
